# sumup-rs

./: .clippy.toml  .gitignore  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PROJECT.md  README.md  REFACTOR_PLAN.md  refactor-2026-01-09.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: 3ds_comprehensive_demo.rs  3ds_live_interactive.rs  3ds_manual_test.rs  3ds_payment_demo.rs  3ds_payment_example.rs  3ds_sandbox_debug.rs  3ds_working_demo.rs  api_explorer.rs  api_test.rs  basic_usage.rs  checkout_example.rs  checkout_status.rs  checkout_url_test.rs  customer_transaction_example.rs  customer_workflow.rs  debug_api_response.rs  implementation_example.rs  oauth_flow.rs  pagination_example.rs  production_checkout_test.rs  real_api_test.rs  real_payment_flow.rs  sandbox_url_test.rs  setup_3ds_testing.rs  team_management.rs  test_api_key.rs  working_checkout.rs  working_checkout_demo.rs
scripts/: check.sh
src/: checkouts.rs  customers.rs  lib.rs  members.rs  memberships.rs  merchant.rs  models.rs  oauth.rs  payouts.rs  readers.rs  receipts.rs  roles.rs  subaccounts.rs  transactions.rs  utils.rs  webhooks.rs
src/models/: checkout.rs  common.rs  customer.rs  enums.rs  member.rs  membership.rs  merchant.rs  mod.rs  payout.rs  reader.rs  receipt.rs  role.rs  transaction.rs
tests/: api_integration.rs  checkout_integration.rs  customers.rs  merchant.rs  payments.rs  real_api_integration.rs  team_management.rs
