[package]
name = "sumup-rs"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Rust client for the SumUp API"
license = "MIT"
repository = "https://github.com/yourusername/sumup-rs"
keywords = ["sumup", "api", "payment", "fintech"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
