[package]
name = "sumup-rs"
version = "0.2.0"
edition = "2021"
description = "A comprehensive, type-safe Rust client for the SumUp API with full async/await support"
license = "MIT"
repository = "https://github.com/yourusername/sumup-rs"
documentation = "https://docs.rs/sumup-rs"
readme = "README.md"
keywords = ["sumup", "api", "payment", "fintech", "checkout"]
categories = ["api-bindings", "web-programming", "asynchronous"]
authors = ["Your Name <your.email@example.com>"]
homepage = "https://github.com/yourusername/sumup-rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
